<resources>
    <string name="app_name">Mercado Libre</string>
    <string name="error_sin_result">No encontramos publicaciones</string>
    <string name="error_sin_result_palabra">Revisa que la palabra esté bien escrita.</string>
    <string name="error_network">¡Parece que no hay internet!</string>
    <string name="error_network_reintent">Reintentar</string>
    <string name="categoria">Categorias</string>
    <string name="paises">Paises</string>
    <string name="product">Lista de productos</string>
    <string name="details">Detalle de productos</string>
    <string name="category">Lista de categorias</string>
    <string name="pais">Lista de paises</string>
    <string name="acercaDe">Acerca de MercadoLibre</string>
</resources>