<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.paises.Paises">

    <RelativeLayout
        android:id="@+id/relative1"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/background"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:src="@drawable/logo1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/pais"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold|italic" />

    </RelativeLayout>

    <ListView
        android:id="@+id/listaPaises"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp"
        android:layout_weight="0.15" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/notnetwork"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="gone">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_network_check_24"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="@dimen/error_network"
            android:text="@string/error_network"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/reintento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="reload"
            android:textColor="@color/azul"
            android:textSize="30dp"
            android:text="@string/error_network_reintent"
            android:layout_gravity="center"/>
    </LinearLayout>

</RelativeLayout>