<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#86222222"
    android:id="@+id/menuOptions">

        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:elevation="10dp"
            android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/info"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/nav_header_height"
                    android:background="@drawable/background"
                    android:gravity="bottom"
                    android:orientation="vertical"
                    android:padding="@dimen/activity_horizontal_margin">

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:paddingTop="@dimen/nav_header_vertical_spacing"
                            android:src="@drawable/splash" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/imageView"
                            android:paddingTop="@dimen/nav_header_vertical_spacing"
                            android:text="@string/app_name"
                            android:textColor="@color/black"
                            android:textSize="15dp"
                            android:textStyle="bold" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:orientation="vertical"
                    android:padding="@dimen/activity_horizontal_margin">

                        <TextView
                            android:id="@+id/categorias"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="25dp"
                            android:drawableStart="@drawable/ic_catgorias"
                            android:drawablePadding="5dp"
                            android:textColor="@color/black"
                            android:text="@string/categoria"
                            />

                        <TextView
                            android:id="@+id/paises"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_paices"
                            android:drawablePadding="5dp"
                            android:padding="25dp"
                            android:text="@string/paises"
                            android:textColor="@color/black" />

                        <View
                            android:id="@+id/divider"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="40dp"
                            android:background="@color/black" />

                        <TextView
                            android:id="@+id/acercade"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawablePadding="5dp"
                            android:padding="25dp"
                            android:text="@string/acercaDe"
                            android:textColor="@color/black" />
                </LinearLayout>
        </LinearLayout>

</RelativeLayout>